@@ -36,7 +36,7 @@ extern "C"
 #include <qpol/cond_query.h>
 #include <qpol/type_query.h>
 
-        typedef struct qpol_avrule qpol_avrule_t;
+	typedef struct qpol_avrule qpol_avrule_t;
 
 /* rule type defines (values copied from "sepol/policydb/policydb.h") */
 #define QPOL_RULE_ALLOW         1
