@@ -1,5 +1,13 @@
 2006-12-12  J. Tang  <jtang@tresys.com>
 
+	* Deprecated apol_policy_is_binary(); use qpol policy capabilities
+	instead.
+
+	* Deprecated qpol_open_policy_from_file(); it is now called
+	qpol_policy_open_from_file().  Similar change to
+	qpol_open_policy_from_file_no_rules() and
+	qpol_open_policy_from_memory().
+
 	* Merged qpol/policy_query.h into qpol/policy.h.  Split module
 	related code into qpol/module.h.
 
